force-app/main/default/objects/Daily_Log__c/Daily_Log__c.object-meta.xml
<CustomObject>
    <description>Daily aggregated time tracking log per user per shift day</description>
    <label>Daily Log</label>
    <nameField>
        <displayFormat>DL-{00000}</displayFormat>
        <label>Daily Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>