force-app/main/default/objects/Daily_Log__c/fields/Log_Date__c.field-meta.xml
<CustomField>
    <fullName>Log_Date__c</fullName>
    <description>The shift-aware logical date this log represents</description>
    <label>Log Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>