force-app/main/default/objects/Daily_Log__c/fields/Shift__c.field-meta.xml
<CustomField>
    <fullName>Shift__c</fullName>
    <description>Denormalized shift name at time of log creation</description>
    <label>Shift</label>
    <length>100</length>
    <type>Text</type>
</CustomField>