force-app/main/default/objects/Daily_Log__c/fields/Total_Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total break/offline time in seconds for this shift day</description>
    <label>Total Break Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>