force-app/main/default/objects/Daily_Log__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>External ID for upsert. Format: {USER_ID}-{YYYY-MM-DD}</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>