force-app/main/default/objects/Daily_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Daily Logs</relationshipLabel>
    <relationshipName>Daily_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>