force-app/main/default/objects/Daily_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Log_Date__c</columns>
    <columns>Shift__c</columns>
    <columns>Total_Available_Time__c</columns>
    <columns>Total_Break_Time__c</columns>
    <columns>Total_Session_Time__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>